methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:1: error: Missing closing brace `}' assumed here
def haveBaggle():Boolean = {
^MethodsReturning:1: error: expected class or object definition
def haveBaggle():Boolean = {
^MethodsReturning:8: error: Missing closing brace `}' assumed here
      else{
      ^MethodsReturning:11: error: Missing closing brace `}' assumed here
} 
^